# pogema

./: .gitignore  404.html  README.md  editor.html  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  version_history.MD
.github/workflows/: CI.yml  codeql-analysis.yml  docs.yml
advanced/custom-positions/: index.html
advanced/lifelong/: index.html
baseline/a-star/: index.html
changelog/: index.html
configuration/collision-systems/: index.html
configuration/custom-maps/: index.html
configuration/grid-config/: index.html
configuration/observation-types/: index.html
configuration/seeding/: index.html
docs/: changelog.md  editor.html  index.md
docs/advanced/: custom-positions.md  lifelong.md
docs/baseline/: a-star.md
docs/configuration/: collision-systems.md  custom-maps.md  grid-config.md  observation-types.md  seeding.md
docs/environment/: api.md  modes.md
docs/getting-started/: installation.md  key-concepts.md  quickstart.md
docs/integrations/: gymnasium.md  pettingzoo.md  sample-factory.md
docs/stylesheets/: pogema.css
docs/tools/: map-editor.md
docs/wrappers/: animation.md  metrics.md  overview.md
environment/api/: index.html
environment/modes/: index.html
getting-started/installation/: index.html
getting-started/key-concepts/: index.html
getting-started/quickstart/: index.html
integrations/gymnasium/: index.html
integrations/pettingzoo/: index.html
integrations/sample-factory/: index.html
pogema/: __init__.py  a_star_policy.py  animation.py  envs.py  generator.py  grid.py  grid_config.py  grid_registry.py  utils.py
pogema/integrations/: jax_intergration.py  make_pogema.py  pettingzoo.py  pymarl.py  sample_factory.py
pogema/svg_animation/: animation_drawer.py  animation_wrapper.py
pogema/wrappers/: animation.py  base.py  metrics.py  multi_time_limit.py  negative_reward.py  persistence.py
search/: search_index.json
tests/: test_a_star_policy.py  test_deterministic_policy.py  test_grid.py  test_integrations.py  test_non_disapear.py  test_pogema_env.py  test_wrappers.py
tools/map-editor/: index.html
wrappers/animation/: index.html
wrappers/metrics/: index.html
wrappers/overview/: index.html
