[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pogema"
description = "Partially Observable Grid Environment for Multiple Agents"
readme = "README.md"
requires-python = ">=3.10,<3.15"
license = {text = "MIT"}
authors = [{name = "Alexey Skrynnik", email = "skrynnikalexey@gmail.com"}]
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "gymnasium>=1.2.3",
    "numpy>=2.0",
    "pydantic>=2.12.5",
    "pettingzoo>=1.24.0,<2.0.0",
]
urls = { "Homepage" = "https://github.com/Cognitive-AI-Systems/pogema" }

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "tabulate", "pytest-codeblocks[test]>=0.17.0"]
dev = ["pogema[test]", "ruff"]
docs = ["mkdocs-material", "markdown-exec[ansi]"]

[tool.hatch.version]
path = "pogema/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["pogema"]

[tool.hatch.build.targets.sdist]
include = ["pogema"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 127

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = [
    "B008",  # mutable default arguments — intentional for Pydantic/dataclass defaults
    "B905",  # zip() without strict= — not needed for same-length iterables
    "B019",  # functools.cache on methods — required by PettingZoo API
]

[tool.ruff.lint.per-file-ignores]
"pogema/__init__.py" = ["I001"]  # import order constrained by circular import
